# Fuin

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/agent/: .env.example  package.json
apps/agent/src/: index.ts
apps/guardian/: package.json
apps/guardian/app/: layout.tsx  page.tsx  providers.tsx
apps/my-video/: package-lock.json  package.json
apps/my-video/public/clips/: Clip02.webm  Clip03.webm
apps/my-video/src/: Root.tsx
apps/my-video/src/promo/: FuinPromo.tsx  colors.ts  easing.ts  fonts.ts  springConfig.ts
apps/vault/: iconify.d.ts  next.config.js  package.json
apps/vault/app/: globals.css  iconify.d.ts  landing.css  layout.tsx  page.tsx
apps/vault/app/components/: AuroraShader.tsx  Features.tsx  Footer.tsx  Header.tsx  ShaderHero.tsx  SplineHero.tsx  UsecaseFlow.tsx
apps/vault/app/dashboard/: layout.tsx  (+1 more)
patches/: @meteora-ag__dlmm@1.9.3.patch
programs/fuin/: Anchor.toml  package-lock.json  package.json  txtx.yml
programs/fuin/programs/fuin/: Cargo.toml
programs/fuin/programs/fuin/src/: error.rs  lib.rs  pricing.rs
programs/fuin/programs/fuin/src/handlers/: delegate_control.rs  execute_spl_transfer.rs  execute_swap.rs  execute_transfer.rs  freeze_vault.rs  init_vault.rs  issue_delegate.rs  issue_session.rs  mod.rs  session_control.rs  shared.rs  update_vault.rs  withdraw.rs
programs/fuin/programs/fuin/src/state/: delegate.rs  mod.rs  policy.rs  route.rs  session.rs  traits.rs  vault.rs
programs/fuin/runbooks/: README.md
programs/fuin/tests/: fuin.ts
scripts/: setup-devnet-pool.ts
(+73 files in other folders)
